bee-common/bee-packable/bee-packable-derive/tests/packable/fail/duplicated_tag_enum.stderr
error: The tag `0` is already being used for the `None` variant.
  --> $DIR/duplicated_tag_enum.rs:17:22
   |
17 |     #[packable(tag = 0)]
   |                      ^
